chore: add HTML content for the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,177 @@
 </head>
 
 <body>
+    <header>
+        <form action="" method="get"><input type="search"></form>
+        <ul class="header-top">
+            <li><img src="" alt="notif"></li>
+            <li><img src="" alt="avatar"></li>
+            <li>Morgan Oakley</li>
+        </ul>
+        <div class="header-left">
+            <img src="" alt="avatar">
+            <div>Hi there,</div>
+            <div>Morgan Oakley (@morgan)</div>
+        </div>
+        <ul class="header-right">
+            <li><button>New</button></li>
+            <li><button>Upload</button></li>
+            <li><button>Share</button></li>
+        </ul>
+    </header>
 
+    <nav>
+        <div class="nav-icon">
+            <img src="" alt="icon">
+            <div>Dashboard</div>
+        </div>
+        <ul class="nav-user-action">
+            <li><a href="">Home</a></li>
+            <li><a href="">Profile</a></li>
+            <li><a href="">Messages</a></li>
+            <li><a href="">History</a></li>
+            <li><a href="">Tasks</a></li>
+            <li><a href="">Communities</a></li>
+        </ul>
+        <ul class="nav-user-support">
+            <li><a href="">Settings</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="">Privacy</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section class="main-projects">
+            <h2>Your Projects</h2>
+            <div class="project-cards">
+                <h3>Super Cool Project</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis, minus quod at facilis distinctio
+                    molestiae expedita, ipsa asperiores repellendus, possimus id neque quo minima eum totam voluptates
+                    ea cumque illum quis dicta in hic exercitationem ut iusto. Molestias libero nisi doloremque, nam
+                    magnam fuga! Consequuntur ex saepe deserunt a ullam?</p>
+                <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            <div class="project-cards">
+                <h3>Less Cool Project</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio perferendis est delectus labore?
+                    Sapiente labore voluptatibus eum fugit laudantium exercitationem laborum nostrum dolorem possimus,
+                    aut esse ad ipsam nisi eius in. Itaque, amet necessitatibus aut ipsa corrupti unde hic commodi,
+                    minus cumque id iusto? Quidem architecto eligendi consequuntur, nam culpa sed reprehenderit
+                    deserunt. Exercitationem veniam architecto nesciunt ipsa perferendis dicta fuga, tenetur a incidunt
+                    amet accusantium similique temporibus, optio voluptas, dignissimos magni repudiandae provident
+                    possimus? Placeat praesentium culpa corrupti rem? Placeat soluta ea voluptates vero vitae temporibus
+                    architecto, non aliquid autem sequi deleniti aperiam maiores molestias at, magnam doloribus ad!</p>
+                <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            <div class="project-cards">
+                <h3>Impossible App</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio temporibus doloribus quibusdam magnam
+                    dolorem, provident corrupti libero neque laborum ducimus.</p>
+                <ul class="project-cards-actions">
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            <div class="project-cards">
+                <h3>Easy Peasy App</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique minus consequuntur ipsam
+                    architecto nulla blanditiis ducimus numquam, omnis porro doloribus nesciunt minima ex, possimus
+                    incidunt soluta quia quas excepturi, iste maiores repellendus. Adipisci voluptas, aut fugit
+                    repellendus vel reprehenderit facilis officiis, nam eum sint fugiat minus nisi placeat. Deleniti,
+                    repudiandae sapiente ducimus iste nobis impedit nostrum voluptates expedita a maxime?</p>
+                <ul class="project-cards-actions">
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            <div class="project-cards">
+                <h3>Ad Blocker</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat est ex alias temporibus
+                    ratione eius, necessitatibus consectetur nemo! Voluptates quis ex assumenda consectetur reiciendis
+                    nostrum! Voluptatibus eaque iste vitae.</p>
+                <ul class="project-cards-actions">
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            <div class="project-cards">
+                <h3>Money Maker</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis corporis rerum, odit, pariatur
+                    ut quod incidunt quo recusandae reiciendis minima animi ratione repellat nobis asperiores?</p>
+                <ul class="project-cards-actions">
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+        </section>
+        <section class="announcements">
+            <h2>Announcements</h2>
+            <ul class="announcements-list">
+                <li>
+                    <h3>Site Maintenance</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis accusantium iste blanditiis quo
+                        tempora odit eum animi. In perspiciatis alias quo, quae aliquid odio, error corporis blanditiis
+                        sunt, et iusto.</p>
+                </li>
+                <li>
+                    <h3>Community Share Day</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente asperiores autem sit,
+                        cupiditate atque alias ullam. Reiciendis architecto inventore, quis ad dolorem ut totam maxime
+                        earum iste esse modi nulla.</p>
+                </li>
+                <li>
+                    <h3>Updated Privacy Policy</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque vitae odit asperiores nemo iure
+                        fugit sint necessitatibus aspernatur sunt, blanditiis, incidunt laboriosam, eos beatae dolorem!
+                        Nulla veritatis suscipit fugit quis!</p>
+                </li>
+            </ul>
+        </section>
+        <section class="trending">
+            <h2>Trending</h2>
+            <ul class="trending-card">
+                <li>
+                    <img src="" alt="icon1">
+                    <div>
+                        <div>@megan</div>
+                        <div>World Peace Builder</div>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="icon2">
+                    <div>
+                        <div>@morgan</div>
+                        <div>Super Cool Project</div>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="icon3">
+                    <div>
+                        <div>@kendall</div>
+                        <div>Life Changing App</div>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="icon4">
+                    <div>
+                        <div>@alex</div>
+                        <div>No Traffic Maker</div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
