style: add header layout

--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 
 <body>
     <header>
-        <form action="" method="get"><input type="search"></form>
-        <ul class="header-top">
+        <form action="" method="get">
+            <label for="search-bar"><img src="" alt="glass icon"></label>
+            <input type="search" id="search-bar">
+        </form>
+        <ul class="header-user-info">
             <li><img src="" alt="notif"></li>
             <li><img src="" alt="avatar"></li>
             <li>Morgan Oakley</li>
         </ul>
-        <div class="header-left">
+        <div class="header-greetings">
             <img src="" alt="avatar">
-            <div>Hi there,</div>
-            <div>Morgan Oakley (@morgan)</div>
+            <div>
+                <p>Hi there,</p>
+                <p>Morgan Oakley (@morgan)</p>
+            </div>
         </div>
-        <ul class="header-right">
+        <ul class="header-user-actions">
             <li><button>New</button></li>
             <li><button>Upload</button></li>
             <li><button>Share</button></li>
