style: add header assets and adjust its layout

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <header>
         <form action="" method="get">
-            <label for="search-bar"><img src="" alt="glass icon"></label>
+            <label for="search-bar"><img src="images/search.svg" alt="glass icon"></label>
             <input type="search" id="search-bar">
         </form>
         <ul class="header-user-info">
-            <li><img src="" alt="notif"></li>
-            <li><img src="" alt="avatar"></li>
+            <li><img src="images/notification.svg" alt="notification icon"></li>
+            <li><img src="images/user-1.svg" alt="avatar icon" class="avatar main"></li>
             <li>Morgan Oakley</li>
         </ul>
         <div class="header-greetings">
-            <img src="" alt="avatar">
+            <img src="images/user-1.svg" alt="avatar icon" class="avatar main">
             <div>
                 <p>Hi there,</p>
                 <p>Morgan Oakley (@morgan)</p>
