style: define nav bar layout

--- a/index.html
+++ b/index.html
@@ -35,21 +35,48 @@
 
     <nav>
         <div class="nav-icon">
-            <img src="" alt="icon">
-            <div>Dashboard</div>
+            <img src="images/dashboard-icon.svg" alt="icon">
+            <a href="">Dashboard</a>
         </div>
         <ul class="nav-user-action">
-            <li><a href="">Home</a></li>
-            <li><a href="">Profile</a></li>
-            <li><a href="">Messages</a></li>
-            <li><a href="">History</a></li>
-            <li><a href="">Tasks</a></li>
-            <li><a href="">Communities</a></li>
+            <li>
+                <img src="images/home.svg" alt="home icon">
+                <a href="">Home</a>
+            </li>
+            <li>
+                <img src="images/account.svg" alt="profile icon">
+                <a href="">Profile</a>
+            </li>
+            <li>
+                <img src="images/message.svg" alt="message icon">
+                <a href="">Messages</a>
+            </li>
+            <li>
+                <img src="images/history.svg" alt="history icon">
+                <a href="">History</a>
+            </li>
+            <li>
+                <img src="images/tasks.svg" alt="tasks icon">
+                <a href="">Tasks</a>
+            </li>
+            <li>
+                <img src="images/community.svg" alt="community icon">
+                <a href="">Communities</a>
+            </li>
         </ul>
         <ul class="nav-user-support">
-            <li><a href="">Settings</a></li>
-            <li><a href="">Support</a></li>
-            <li><a href="">Privacy</a></li>
+            <li>
+                <img src="images/settings.svg" alt="settings icon">
+                <a href="">Settings</a>
+            </li>
+            <li>
+                <img src="images/support.svg" alt="support icon">
+                <a href="">Support</a>
+            </li>
+            <li>
+                <img src="images/privacy.svg" alt="privacy icon">
+                <a href="">Privacy</a>
+            </li>
         </ul>
     </nav>
     <main>
