style: define main secton layout

--- a/index.html
+++ b/index.html
@@ -80,136 +80,211 @@
         </ul>
     </nav>
     <main>
-        <section class="main-projects">
+        <section class="projects">
             <h2>Your Projects</h2>
-            <div class="project-cards">
-                <h3>Super Cool Project</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis, minus quod at facilis distinctio
-                    molestiae expedita, ipsa asperiores repellendus, possimus id neque quo minima eum totam voluptates
-                    ea cumque illum quis dicta in hic exercitationem ut iusto. Molestias libero nisi doloremque, nam
-                    magnam fuga! Consequuntur ex saepe deserunt a ullam?</p>
-                <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </div>
-            <div class="project-cards">
-                <h3>Less Cool Project</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio perferendis est delectus labore?
-                    Sapiente labore voluptatibus eum fugit laudantium exercitationem laborum nostrum dolorem possimus,
-                    aut esse ad ipsam nisi eius in. Itaque, amet necessitatibus aut ipsa corrupti unde hic commodi,
-                    minus cumque id iusto? Quidem architecto eligendi consequuntur, nam culpa sed reprehenderit
-                    deserunt. Exercitationem veniam architecto nesciunt ipsa perferendis dicta fuga, tenetur a incidunt
-                    amet accusantium similique temporibus, optio voluptas, dignissimos magni repudiandae provident
-                    possimus? Placeat praesentium culpa corrupti rem? Placeat soluta ea voluptates vero vitae temporibus
-                    architecto, non aliquid autem sequi deleniti aperiam maiores molestias at, magnam doloribus ad!</p>
-                <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </div>
-            <div class="project-cards">
-                <h3>Impossible App</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio temporibus doloribus quibusdam magnam
-                    dolorem, provident corrupti libero neque laborum ducimus.</p>
-                <ul class="project-cards-actions">
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </div>
-            <div class="project-cards">
-                <h3>Easy Peasy App</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique minus consequuntur ipsam
-                    architecto nulla blanditiis ducimus numquam, omnis porro doloribus nesciunt minima ex, possimus
-                    incidunt soluta quia quas excepturi, iste maiores repellendus. Adipisci voluptas, aut fugit
-                    repellendus vel reprehenderit facilis officiis, nam eum sint fugiat minus nisi placeat. Deleniti,
-                    repudiandae sapiente ducimus iste nobis impedit nostrum voluptates expedita a maxime?</p>
-                <ul class="project-cards-actions">
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </div>
-            <div class="project-cards">
-                <h3>Ad Blocker</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat est ex alias temporibus
-                    ratione eius, necessitatibus consectetur nemo! Voluptates quis ex assumenda consectetur reiciendis
-                    nostrum! Voluptatibus eaque iste vitae.</p>
-                <ul class="project-cards-actions">
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </div>
-            <div class="project-cards">
-                <h3>Money Maker</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis corporis rerum, odit, pariatur
-                    ut quod incidunt quo recusandae reiciendis minima animi ratione repellat nobis asperiores?</p>
-                <ul class="project-cards-actions">
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
+            <div class="projects-content">
+                <div class="project-cards">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio temporibus doloribus quibusdam
+                        magnam dolorem, provident corrupti libero neque laborum ducimus.</p>
+                    <ul class="project-cards-actions">
+                        <li>
+                            <a href="">
+                                <img src="images/star.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/eye.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/branch.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="project-cards">
+                    <h3>Less Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio temporibus doloribus quibusdam
+                        magnam dolorem, provident corrupti libero neque laborum ducimus.
+                    </p>
+                    <ul class="project-cards-actions">
+                        <li>
+                            <a href="">
+                                <img src="images/star.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/eye.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/branch.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="project-cards">
+                    <h3>Impossible App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio temporibus doloribus quibusdam
+                        magnam dolorem, provident corrupti libero neque laborum ducimus.</p>
+                    <ul class="project-cards-actions">
+                        <li>
+                            <a href="">
+                                <img src="images/star.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/eye.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/branch.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="project-cards">
+                    <h3>Easy Peasy App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio temporibus doloribus quibusdam
+                        magnam dolorem, provident corrupti libero neque laborum ducimus.</p>
+                    <ul class="project-cards-actions">
+                        <li>
+                            <a href="">
+                                <img src="images/star.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/eye.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/branch.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="project-cards">
+                    <h3>Ad Blocker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat est ex alias
+                        temporibus
+                        ratione eius, necessitatibus consectetur nemo! Voluptates quis ex assumenda consectetur
+                        reiciendis
+                        nostrum! Voluptatibus eaque iste vitae.</p>
+                    <ul class="project-cards-actions">
+                        <li>
+                            <a href="">
+                                <img src="images/star.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/eye.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/branch.svg" alt="">
+                            </a>
+                        </li>
+                </div>
+                <div class="project-cards">
+                    <h3>Money Maker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis corporis rerum, odit,
+                        pariatur
+                        ut quod incidunt quo recusandae reiciendis minima animi ratione repellat nobis asperiores?</p>
+                    <ul class="project-cards-actions">
+                        <li>
+                            <a href="">
+                                <img src="images/star.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/eye.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/branch.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section class="announcements">
             <h2>Announcements</h2>
-            <ul class="announcements-list">
-                <li>
-                    <h3>Site Maintenance</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis accusantium iste blanditiis quo
-                        tempora odit eum animi. In perspiciatis alias quo, quae aliquid odio, error corporis blanditiis
-                        sunt, et iusto.</p>
-                </li>
-                <li>
-                    <h3>Community Share Day</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente asperiores autem sit,
-                        cupiditate atque alias ullam. Reiciendis architecto inventore, quis ad dolorem ut totam maxime
-                        earum iste esse modi nulla.</p>
-                </li>
-                <li>
-                    <h3>Updated Privacy Policy</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque vitae odit asperiores nemo iure
-                        fugit sint necessitatibus aspernatur sunt, blanditiis, incidunt laboriosam, eos beatae dolorem!
-                        Nulla veritatis suscipit fugit quis!</p>
-                </li>
-            </ul>
+            <div class="announcements-content">
+                <ul class="announcements-list">
+                    <li>
+                        <h3>Site Maintenance</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis accusantium iste blanditiis
+                            quo
+                            tempora odit eum animi. In perspiciatis alias quo, quae aliquid odio, error corporis
+                            blanditiis
+                            sunt, et iusto.</p>
+                    </li>
+                    <li>
+                        <h3>Community Share Day</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente asperiores autem sit,
+                            cupiditate atque alias ullam. Reiciendis architecto inventore, quis ad dolorem ut totam
+                            maxime
+                            earum iste esse modi nulla.</p>
+                    </li>
+                    <li>
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque vitae odit asperiores nemo
+                            iure
+                            fugit sint necessitatibus aspernatur sunt, blanditiis, incidunt laboriosam, eos beatae
+                            dolorem!
+                            Nulla veritatis suscipit fugit quis!</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="trending">
             <h2>Trending</h2>
-            <ul class="trending-card">
-                <li>
-                    <img src="" alt="icon1">
-                    <div>
-                        <div>@megan</div>
-                        <div>World Peace Builder</div>
-                    </div>
-                </li>
-                <li>
-                    <img src="" alt="icon2">
-                    <div>
-                        <div>@morgan</div>
-                        <div>Super Cool Project</div>
-                    </div>
-                </li>
-                <li>
-                    <img src="" alt="icon3">
-                    <div>
-                        <div>@kendall</div>
-                        <div>Life Changing App</div>
-                    </div>
-                </li>
-                <li>
-                    <img src="" alt="icon4">
-                    <div>
-                        <div>@alex</div>
-                        <div>No Traffic Maker</div>
-                    </div>
-                </li>
-            </ul>
+            <div class="trending-content">
+                <ul class="trending-card">
+                    <li>
+                        <img src="images/user-2.svg" alt="icon1">
+                        <div>
+                            <div>@megan</div>
+                            <div>World Peace Builder</div>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/user-1.svg" alt="icon2">
+                        <div>
+                            <div>@morgan</div>
+                            <div>Super Cool Project</div>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/user3.svg" alt="icon3">
+                        <div>
+                            <div>@kendall</div>
+                            <div>Life Changing App</div>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/user-4.svg" alt="icon4">
+                        <div>
+                            <div>@alex</div>
+                            <div>No Traffic Maker</div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 </body>
