fix: add missing closing tags and adjusting links

--- a/index.html
+++ b/index.html
@@ -36,46 +36,46 @@
     <nav>
         <div class="nav-icon">
             <img src="images/dashboard-icon.svg" alt="icon">
-            <a href="">Dashboard</a>
+            <a href="#">Dashboard</a>
         </div>
         <ul class="nav-user-action">
             <li>
                 <img src="images/home.svg" alt="home icon">
-                <a href="">Home</a>
+                <a href="#">Home</a>
             </li>
             <li>
                 <img src="images/account.svg" alt="profile icon">
-                <a href="">Profile</a>
+                <a href="#">Profile</a>
             </li>
             <li>
                 <img src="images/message.svg" alt="message icon">
-                <a href="">Messages</a>
+                <a href="#">Messages</a>
             </li>
             <li>
                 <img src="images/history.svg" alt="history icon">
-                <a href="">History</a>
+                <a href="#">History</a>
             </li>
             <li>
                 <img src="images/tasks.svg" alt="tasks icon">
-                <a href="">Tasks</a>
+                <a href="#">Tasks</a>
             </li>
             <li>
                 <img src="images/community.svg" alt="community icon">
-                <a href="">Communities</a>
+                <a href="#">Communities</a>
             </li>
         </ul>
         <ul class="nav-user-support">
             <li>
                 <img src="images/settings.svg" alt="settings icon">
-                <a href="">Settings</a>
+                <a href="#">Settings</a>
             </li>
             <li>
                 <img src="images/support.svg" alt="support icon">
-                <a href="">Support</a>
+                <a href="#">Support</a>
             </li>
             <li>
                 <img src="images/privacy.svg" alt="privacy icon">
-                <a href="">Privacy</a>
+                <a href="#">Privacy</a>
             </li>
         </ul>
     </nav>
@@ -89,17 +89,17 @@
                         magnam dolorem, provident corrupti libero neque laborum ducimus.</p>
                     <ul class="project-cards-actions">
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/star.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/eye.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/branch.svg" alt="">
                             </a>
                         </li>
@@ -112,17 +112,17 @@
                     </p>
                     <ul class="project-cards-actions">
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/star.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/eye.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/branch.svg" alt="">
                             </a>
                         </li>
@@ -134,17 +134,17 @@
                         magnam dolorem, provident corrupti libero neque laborum ducimus.</p>
                     <ul class="project-cards-actions">
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/star.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/eye.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/branch.svg" alt="">
                             </a>
                         </li>
@@ -156,17 +156,17 @@
                         magnam dolorem, provident corrupti libero neque laborum ducimus.</p>
                     <ul class="project-cards-actions">
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/star.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/eye.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/branch.svg" alt="">
                             </a>
                         </li>
@@ -181,20 +181,21 @@
                         nostrum! Voluptatibus eaque iste vitae.</p>
                     <ul class="project-cards-actions">
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/star.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/eye.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/branch.svg" alt="">
                             </a>
                         </li>
+                    </ul>
                 </div>
                 <div class="project-cards">
                     <h3>Money Maker</h3>
@@ -203,17 +204,17 @@
                         ut quod incidunt quo recusandae reiciendis minima animi ratione repellat nobis asperiores?</p>
                     <ul class="project-cards-actions">
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/star.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/eye.svg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img src="images/branch.svg" alt="">
                             </a>
                         </li>
